force-app/main/default/objects/Bus_Maintenance__c/Bus_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Bus Maintenance</label>
    <nameField>
        <label>Bus  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Maintenances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>