force-app/main/default/objects/Bus_Maintenance__c/fields/Braking_fluid_level__c.field-meta.xml
<CustomField>
    <fullName>Braking_fluid_level__c</fullName>
    <label>Braking fluid level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>