force-app/main/default/objects/Bus_Maintenance__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Bus Maintenances</relationshipLabel>
    <relationshipName>Bus_Maintenances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>