force-app/main/default/objects/Bus_Maintenance__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>Give maintenance reason here</description>
    <label>Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>