force-app/main/default/objects/Bus_Maintenance__c/fields/Recorded_odometer__c.field-meta.xml
<CustomField>
    <fullName>Recorded_odometer__c</fullName>
    <label>Recorded odometer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>