force-app/main/default/objects/Bus_Maintenance__c/fields/Schedule_reason__c.field-meta.xml
<CustomField>
    <fullName>Schedule_reason__c</fullName>
    <label>Schedule reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brake</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Fluid</fullName>
            </value>
            <value>
                <fullName>Oil Tank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Scheduled Maintenance</fullName>
            </value>
            <value>
                <fullName>Tyre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>