force-app/main/default/objects/Bus_Maintenance__c/fields/Tyre_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Conditions__c</fullName>
    <label>Tyre Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Wear</fullName>
            </value>
            <value>
                <fullName>Medium Wear</fullName>
            </value>
            <value>
                <fullName>Low Wear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>